--- a/index.html
+++ b/index.html
@@ -5,16 +5,24 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0" />
     <link rel="stylesheet" href="main.css" />
     <title>NewYork Times Article Page</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.min.css">
   </head>
   <body>
     <header>
-
+        <nav>
+            <i class="fas fa-bars"></i>
+            <i class="fas fa-search"></i>
+            <a href="">SPACE & COSMOS</a>
+            <p>The New York Times</p>
+            <button>SUBSCRIBE NOW</button>
+            <button>LOG IN</button>
+        </nav>
     </header>
     <main>
 
     </main>
     <footer>
-        
+
     </footer>
   </body>
 </html>
