Add footer thumbnail grid

--- a/index.html
+++ b/index.html
@@ -141,7 +141,59 @@
       </aside>
     </main>
     <footer>
-
+      <section id="more-footer">
+        <h3><a href="">More in Space & Cosmos </a></h3>
+        <div id="thumbnail-grid">
+          <div class="thumbnail">
+            <figure>
+              <img src="/images/Astronaut.jpg" alt="astronaut">
+              <figcaption>Maxim Shipenkov/EPA, via Shutterstock</figcaption>
+            </figure>
+            <p>Hazzaa al-Mansoori, First U.A.E. Astronaut, Launches to Space Station</p>
+            <p>Sept. 25</p>
+          </div>
+          <div class="thumbnail">
+            <figure>
+              <img src="/images/chandrayaan-2.jpg" alt="chandrayaan-2">
+              <figcaption></figcaption>
+            </figure>
+            <p>India’s Chandrayaan-2 Marks 60 Years of Moon Crashes and Hard Landings</p>
+            <p>Sept. 20</p>
+          </div>
+          <div class="thumbnail">
+            <figure>
+              <img src="/images/comet.jpg" alt="comet space">
+              <figcaption>Gennady Borisov</figcaption>
+            </figure>
+            <p>The Maybe Comet From Another Star</p>
+            <p>Sept. 12</p>
+          </div>
+          <div class="thumbnail">
+            <figure>
+              <img src="/images/indianmoon.jpg" alt="moon lander survive">
+              <figcaption>Manjunath Kiran/Agence France-Presse - Getty Images</figcaption>
+            </figure>
+            <p>Did India’s Chandrayaan-2 Moon Lander Survive? The Chances Are Slim</p>
+            <p>Sept. 11</p>
+          </div>
+          <div class="thumbnail">
+            <figure>
+              <img src="/images/trumpspace.jpg" alt="Donald trump">
+              <figcaption>Image by Anna Moneymaker/The New York Times</figcaption>
+            </figure>
+            <p>Trump Authorizes a Space Command. Next, He Wants a Space Force.</p>
+            <p>Aug. 30</p>
+          </div>
+          <div class="thumbnail">
+            <figure>
+              <img src="/images/maxim-superJumbo.jpg" alt="NASA Astronauts">
+              <figcaption>Maxim Babenko for The New York Times</figcaption>
+            </figure>
+            <p>NASA Astronaut Anne McClain Accused by Spouse of Crime in Space</p>
+            <p>Aug. 24</p>
+          </div>
+        </div>
+      </section>
     </footer>
   </body>
 </html>
