Added the footer nav and aside bar

--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
     <footer>
       <section id="more-footer">
         <h3><a href="">More in Space & Cosmos </a></h3>
-        <div id="thumbnail-grid">
+        <div class="thumbnail-grid">
           <div class="thumbnail">
             <figure>
               <img src="/images/Astronaut.jpg" alt="astronaut">
@@ -194,6 +194,139 @@
           </div>
         </div>
       </section>
+      <section id="editor-pick">
+        <h3><a href="">Editors’ Picks </a></h3>
+        <div class="thumbnail-grid">
+          <div class="thumbnail">
+            <figure>
+              <img src="/images/sprint.jpg" alt="sprint">
+              <figcaption>Cornelia li</figcaption>
+            </figure>
+            <p>In the Salary Race, Engineers Sprint, but English Majors Endure.</p>
+            <p>Sept. 20</p>
+          </div>
+          <div class="thumbnail">
+            <figure>
+              <img src="/images/tekashi.jpg" alt="tekashi 69">
+              <figcaption>Jefferson Siegel for the New York Times</figcaption>
+            </figure>
+            <p>Tekashi 69: Can He Disappear After Testifying Against the Bloods</p>
+            <p>Sept. 22</p>
+          </div>
+          <div class="thumbnail">
+            <figure>
+              <img src="/images/silicon-valley.jpg" alt="silicon-valley therapy">
+              <figcaption>Todd StJohn</figcaption>
+            </figure>
+            <p>Silicon Valley Goes to Therapy</p>
+            <p>Sept. 20</p>
+          </div>
+        </div>
+      </section>
+      <aside>
+        <h3>Most Popular</h3>
+        <ul>
+          <li class="most"><a href="">An Underwater World of Marble to Amuse and Protect Tuscan Fish</a></li>
+          <li class="most"><a href="">How to Buy Clothes That Are Built to Last</a></li>
+          <li class="most"><a href="">Opinion: Does Donald Trump Want to Be Impeached?</a></li>
+          <li class="most"><a href="">Weeknight Dinner Around the World</a></li>
+          <li class="most"><a href="">Nancy Pelosi Announces Formal Impeachment Inquiry of Trump</a></li>
+          <li class="most"><a href="">Trump Said to Have Frozen Aid to Ukraine Before Call With Its Leader</a></li>
+          <li class="most"><a href="">Opinion: Congress Steps Up, Trump Blinks</a></li>
+          <li class="most"><a href="">Opinion: Why I Changed My Mind About Impeachment</a></li>
+          <li class="most"><a href="">Pelosi Tells Trump: ‘You Have Come Into My Wheelhouse’</a></li>
+          <li class="most"><a href="">Opinion: The Winners and Losers of the Latest Trump Scandal</a></li>
+        </ul>
+      </aside>
+      <nav>
+        <p><a href="">The New York Times</a></p>
+        <ul class="ul-container">
+          <ul>
+            <li>News</li>
+            <li><a href="">Home Page</a></li>
+            <li><a href="">World</a></li>
+            <li><a href="">US</a></li>
+            <li><a href="">Politics</a></li>
+            <li><a href="">Election 2020</a></li>
+            <li><a href="">New York</a></li>
+            <li><a href="">Business</a></li>
+            <li><a href="">Tech</a></li>
+            <li><a href="">Science</a></li>
+            <li><a href="">Sport</a></li>
+            <li><a href="">Obituaries</a></li>
+            <li><a href="">Today's Paper</a></li>
+            <li><a href="">Corrections</a></li>
+          </ul>
+          <ul>
+            <li>Opinion</li>
+            <li><a href="">Today's Opinion</a></li>
+            <li><a href="">Op-Ed Columnists</a></li>
+            <li><a href="">Editorials</a></li>
+            <li><a href="">Op-Ed Contributors</a></li>
+            <li><a href="">Letters</a></li>
+            <li><a href="">Sunday Review</a></li>
+            <li><a href="">Video: Opinion</a></li>
+          </ul>
+          <ul>
+            <li>Arts</li>
+            <li><a href="">Today's art</a></li>
+            <li><a href="">Arts & Design</a></li>
+            <li><a href="">Books</a></li>
+            <li><a href="">Dance</a></li>
+            <li><a href="">Movies</a></li>
+            <li><a href="">Music</a></li>
+            <li><a href="">Pop Culture</a></li>
+            <li><a href="">Television</a></li>
+            <li><a href="">Theatre</a></li>
+            <li><a href="">Video: Arts</a></li>
+          </ul>
+          <ul>
+          <li>Living</li>
+            <li><a href="">Automobiles</a></li>
+            <li><a href="">Crossword</a></li>
+            <li><a href="">Education</a></li>
+            <li><a href="">Food</a></li>
+            <li><a href="">Health</a></li>
+            <li><a href="">Jobs</a></li>
+            <li><a href="">Magazine</a></li>
+            <li><a href="">Parenting</a></li>
+            <li><a href="">Real Estate</a></li>
+            <li><a href="">Style</a></li>
+            <li><a href="">T Magazine</a></li>
+            <li><a href="">Travel</a></li>
+            <li><a href="">Love</a></li>
+          </ul>
+          <ul>
+          <li>More</li>
+            <li><a href="">Reader Center</a></li>
+            <li><a href="">Wire Cutter</a></li>
+            <li><a href="">Live Events</a></li>
+            <li><a href="">The Learning Network</a></li>
+            <li><a href="">Tools & Services</a></li>
+            <li><a href="">N.Y.C Events Guide</a></li>
+            <li><a href="">Multimedia</a></li>
+            <li><a href="">Photography</a></li>
+            <li><a href="">Videos</a></li>
+            <li><a href="">News letters</a></li>
+            <li><a href="">N.Y.T Store</a></li>
+            <li><a href="">Times Journey</a></li>
+            <li><a href="">Manage My Account</a></li>
+          </ul>
+          <ul>
+            <li>Subscribe</li>
+              <li><a href="">Home delivery</a></li>
+              <li><a href="">Digital subscription</a></li>
+              <li><a href="">Crossword</a></li>
+              <li><a href="">Cooking</a></li>
+              <li><a href="">Email Newsletters</a></li>
+              <li><a href="">Corporate subscription</a></li>
+              <li><a href="">Education rate</a></li>
+              <li><a href="">Mobile Application</a></li>
+              <li><a href="">Replica Edition</a></li>
+              <li><a href="">Espanol</a></li>
+            </ul>
+        </ul>
+      </nav>
     </footer>
   </body>
 </html>
