add styles for main content

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <main>
       <!--First image section-->
       <section>
-        <h1>Space Ripples Reveal Big Bang’s Smoking Gun</h1>
+        <h1>Space Ripples Reveal<br> Big Bang’s Smoking Gun</h1>
         <figure>
           <img
             src="https://static01.nyt.com/images/2014/03/18/science/space/18cosmos/18cosmos-superJumbo.jpg?quality=90&auto=webp"
@@ -43,20 +43,23 @@
             Alan Guth was one of the first physicists to hypothesize the
             existence of inflation, which explains how the universe expanded so
             uniformly and so quickly in the instant after the Big Bang 13.8
-            billion years ago.CreditCreditRick Friedman for The New York Times
+            billion years ago.<br>
+            <small>Rick Friedman for The New York Times</small>
           </figcaption>
         </figure>
       </section>
       <!--Main story section-->
       <section class="container">
-        <h3>By Dennis Overbye</h3>
+        <h4>By <a href="">Dennis Overbye</a></h4>
         <div>
-          <h5>March 17, 2014</h5>
-          <a href="facebook"><i class="fab fa-facebook"></i></a>
-          <a href="twitter"><i class="fab fa-twitter"></i></a>
-          <a href="message"><i class="fas fa-envelope"></i></a>
-          <a href="share"><i class="fas fa-share"></i></a>
-          <a href="bookmark"><i class="far fa-bookmark"></i></a>
+          <p>March 17, 2014</p>
+          <div class="social-icons">
+              <a href="facebook"><i class="fab fa-facebook"></i></a>
+              <a href="twitter"><i class="fab fa-twitter"></i></a>
+              <a href="message"><i class="fas fa-envelope"></i></a>
+              <a href="share"><i class="fas fa-share"></i></a>
+              <a href="bookmark"><i class="far fa-bookmark"></i></a>
+          </div>
         </div>
         <p>
           CAMBRIDGE, Mass. — One night late in 1979, an itinerant young
@@ -162,55 +165,57 @@
           <img src="images/inflation-945.png" alt="inflation" />
           <div id="text-labels">
             <p class="theory">
-              THE UNIVERSE is just under 14 billion years old. From our position
+              <strong>THE UNIVERSE</strong> is just under 14 billion years old. From our position
               in the Milky Way galaxy, we can observe a sphere that is now about
               92 billion light-years across. But there's a mystery. Wherever we
               look, the universe has an even temperature.
             </p>
             <p class="theory">
-              NOT ENOUGH TIME The universe is not old enough for light to have
+              <strong>NOT ENOUGH TIME</strong> The universe is not old enough for light to have
               traveled the vast distance from one side of the universe to the
               other, and there has not been enough time for scattered patches of
               hot and cold to mix into an even temperature.
             </p>
             <p class="theory">
-              DISTANT COFFEE At a smaller scale, imagine using a telescope to
+              <strong>DISTANT COFFEE</strong> At a smaller scale, imagine using a telescope to
               look a mile in one direction. You see a coffee cup, and from the
               amount of steam, you can estimate its temperature and how much it
               has cooled.
             </p>
             <p class="theory">
-              COFFEE EVERYWHERE Now turn around and look a mile in the other
+              <strong>COFFEE EVERYWHERE</strong> Now turn around and look a mile in the other
               direction. You see a similar coffee cup, at exactly the same
               temperature. Coincidence? Maybe. But if you see a similar cup in
               every direction, you might want to look for another explanation.
             </p>
             <p class="theory">
-              STILL NOT ENOUGH TIME There has not been enough time to carry
+              <strong>STILL NOT ENOUGH TIME</strong> There has not been enough time to carry
               coffee cups from place to place before they get cold. But if all
               the coffee cups were somehow filled from a single coffee pot, all
               at the same time, that might explain their even temperature.
             </p>
             <p class="theory">
-              INFLATION solves this problem. The theory proposes that, less than
+              <strong>INFLATION</strong> solves this problem. The theory proposes that, less than
               a trillionth of a second after the Big Bang, the universe expanded
               faster than the speed of light. Tiny ripples in the violently
               expanding energy field eventually grew into the large-scale
               structures of the universe.
             </p>
             <p class="theory">
-              FLUCTUATION Astronomers have now detected evidence of these
+              <strong>FLUCTUATION</strong> Astronomers have now detected evidence of these
               ancient fluctuations in swirls of polarized light in the cosmic
               background radiation, which is energy left over from the early
               universe. These are gravitational waves predicted by Einstein.
             </p>
             <p class="theory">
-              EXPANSION Returning to our coffee, imagine a single, central pot
+              <strong>EXPANSION</strong> Returning to our coffee, imagine a single, central pot
               expanding faster than light and cooling to an even temperature as
               it expands. That is something like inflation. And the structure of
               the universe mirrors the froth and foam of the original pot.
             </p>
           </div>
+          <hr>
+          <p>By LARRY BUCHANAN and JONATHAN CORUM</p>
         </div>
       </section>
       <section class="container below-theory">
@@ -442,14 +447,20 @@
           Harvard-Smithsonian astronomer who was not part of the team, “you wind
           up at inflation.”
         </p>
-        <small
-          >A version of this article appears in print on March 18, 2014, Section
+        <small>A version of this article appears in print on March 18, 2014, Section
           A, Page 1 of the New York edition with the headline: Space Ripples
           Reveal Big Bang’s Smoking Gun. <a href="">Order Reprints</a> |
           <a href="">Today’s Paper</a> | <a href="">Subscribe</a>
         </small>
+        <div class="social-icons">
+          <a href=""><i class="fab fa-facebook"></i></a>
+          <a href=""><i class="fab fa-twitter"></i></a>
+          <a href=""><i class="fas fa-envelope"></i></a>
+          <a href=""><i class="fas fa-share"></i></a>
+          <a href=""><i class="far fa-bookmark"></i></a>
+        </div>
       </section>
-
+      <!-- Start of Side Bar -->
       <aside>
         <div class="side side1">
           <h4>Sign up for Science Times</h4>
@@ -478,6 +489,8 @@
         </div>
       </aside>
     </main>
+    <!---End of Main Section-->
+    <!--Start of Footer-->
     <footer>
       <section id="more-footer">
         <h3><a href="">More in Space & Cosmos </a></h3>
