Fixed side bar and added styles to it

--- a/index.html
+++ b/index.html
@@ -461,34 +461,40 @@
         </div>
       </section>
       <!-- Start of Side Bar -->
-      <aside>
-        <div class="side side1">
-          <h4>Sign up for Science Times</h4>
-          <p>
-            We’ll bring you stories that capture the wonders of the human body,
-            nature and the cosmos.
-          </p>
-          <button>Sign up</button>
-        </div>
-        <div class="side side2">
-          <h4>Editors’ Picks</h4>
-          <img src="/images/download.jpeg" alt="lady" />
-          <a href="">Everyone writes. But is everyone a writter?</a>
-          <img src="/images/food.jpeg" alt="food" />
-          <a href="">My quest for lunchbox supremacy</a>
-          <img src="/images/cartoon.jpeg" alt="cartoon" />
-          <a href=""
-            >More and more children are feeling anxious. This graphic novelist
-            is trying to help.</a
-          >
-          <img src="/images/doggie.jpeg" alt="doggie" />
-          <a href=""
-            >PAID POST: Global covenant of Mayors. How cities and nations are
-            exchanging green solutions</a
-          >
-        </div>
-      </aside>
+      
     </main>
+    <aside class="main-aside">
+      <div class="side side1">
+        <h4>Sign up for Science Times</h4>
+        <p>
+          We’ll bring you stories that capture the wonders of the human body,
+          nature and the cosmos.
+        </p>
+        <button>Sign up</button>
+      </div>
+      <div class="side side2">
+        <h4>Editors’ Picks</h4>
+        <figure>
+          <img src="/images/download.jpeg" alt="lady" />
+        <a href="">Everyone writes. But is everyone a writter?</a>
+        </figure>
+        <figure>
+          <img src="/images/food.jpeg" alt="food" />
+        <a href="">My quest for lunchbox supremacy</a>
+        </figure>
+        <figure>
+          <img src="/images/cartoon.jpeg" alt="cartoon" />
+        <a href="">More and more children are feeling anxious. This graphic novelist
+          is trying to help.</a>
+        </figure>
+        <figure>
+          <img src="/images/doggie.jpeg" alt="doggie" />
+        <a href=""><strong>PAID POST: Global covenant of Mayors.</strong> <br> How cities and nations are
+          exchanging green solutions</a>
+        </figure>
+        
+      </div>
+    </aside>
     <!---End of Main Section-->
     <!--Start of Footer-->
     <footer>
