add styles for fat footer

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
           <a href="">SPACE & COSMOS</a>
         </div>
         <img
+          class="logo"
           src="images/new-york-times-logo.png"
           width="auto"
           height="30"
@@ -460,9 +461,10 @@
           <a href=""><i class="far fa-bookmark"></i></a>
         </div>
       </section>
-      <!-- Start of Side Bar -->
-      
     </main>
+    <!---End of Main Section-->
+
+    <!-- Start of Side Bar -->
     <aside class="main-aside">
       <div class="side side1">
         <h4>Sign up for Science Times</h4>
@@ -492,10 +494,10 @@
         <a href=""><strong>PAID POST: Global covenant of Mayors.</strong> <br> How cities and nations are
           exchanging green solutions</a>
         </figure>
-        
       </div>
     </aside>
-    <!---End of Main Section-->
+    <!--End of Side bar-->
+
     <!--Start of Footer-->
     <footer>
       <section id="more-footer">
@@ -608,9 +610,7 @@
         <h3>Most Popular</h3>
         <ul>
           <li class="most">
-            <a href=""
-              >An Underwater World of Marble to Amuse and Protect Tuscan Fish</a
-            >
+            <a href="">An Underwater World of Marble to Amuse and Protect Tuscan Fish</a>
           </li>
           <li class="most">
             <a href="">How to Buy Clothes That Are Built to Last</a>
@@ -620,15 +620,11 @@
           </li>
           <li class="most"><a href="">Weeknight Dinner Around the World</a></li>
           <li class="most">
-            <a href=""
-              >Nancy Pelosi Announces Formal Impeachment Inquiry of Trump</a
-            >
+            <a href="">Nancy Pelosi Announces Formal Impeachment Inquiry of Trump</a>
           </li>
           <li class="most">
-            <a href=""
-              >Trump Said to Have Frozen Aid to Ukraine Before Call With Its
-              Leader</a
-            >
+            <a href="">Trump Said to Have Frozen Aid to Ukraine Before Call With Its
+              Leader</a>
           </li>
           <li class="most">
             <a href="">Opinion: Congress Steps Up, Trump Blinks</a>
@@ -637,19 +633,23 @@
             <a href="">Opinion: Why I Changed My Mind About Impeachment</a>
           </li>
           <li class="most">
-            <a href=""
-              >Pelosi Tells Trump: ‘You Have Come Into My Wheelhouse’</a
-            >
+            <a href="">Pelosi Tells Trump: ‘You Have Come Into My Wheelhouse’</a>
           </li>
           <li class="most">
-            <a href=""
-              >Opinion: The Winners and Losers of the Latest Trump Scandal</a
-            >
+            <a href="">Opinion: The Winners and Losers of the Latest Trump Scandal</a>
           </li>
         </ul>
       </aside>
       <nav>
-        <p><a href="">The New York Times</a></p>
+        <a href="">
+          <img
+          class="logo"
+          src="images/new-york-times-logo.png"
+          width="auto"
+          height="30"
+          alt="newyork times logo"
+        />
+        </a>
         <ul class="ul-container">
           <ul>
             <li>News</li>
