finished working on footer

--- a/index.html
+++ b/index.html
@@ -724,19 +724,38 @@
           </ul>
           <ul>
             <li>Subscribe</li>
-            <li><a href="">Home delivery</a></li>
-            <li><a href="">Digital subscription</a></li>
-            <li><a href="">Crossword</a></li>
-            <li><a href="">Cooking</a></li>
+            <li><a href=""><i class="far fa-newspaper"></i> Home delivery</a></li>
+            <li><a href=""><i class="fab fa-neos"></i> Digital subscription</a></li>
+            <li><a href=""><i class="fas fa-chess-board"></i> Crossword</a></li>
+            <li><a href=""><i class="fas fa-utensils"></i> Cooking</a></li>
             <li><a href="">Email Newsletters</a></li>
             <li><a href="">Corporate subscription</a></li>
             <li><a href="">Education rate</a></li>
+            <li><hr></li>
             <li><a href="">Mobile Application</a></li>
             <li><a href="">Replica Edition</a></li>
             <li><a href="">Espanol</a></li>
           </ul>
         </ul>
       </nav>
+      <footer>
+        <ul>
+          <li>&copy; The New York Times Company</li>
+          <li><a href="">Contact Us</a></li>
+          <li><a href="">Work With Us</a></li>
+          <li><a href="">Advertise</a></li>
+          <li><a href="">T Brand Studio</a></li>
+          <li><a href="">Your Ad Choices</a></li>
+          <li><a href="">Privacy</a></li>
+          <li><a href="">Terms of Service</a></li>
+          <li><a href="">Terms of Sales</a></li>
+          <li><a href="">Site Map</a></li>
+          <li><a href="">Help</a></li>
+          <li><a href="">Subscriptions</a></li>
+          <li><a href="">Times Journey</a></li>
+          <li><a href="">Manage My Account</a></li>
+        </ul>
+      </footer>
     </footer>
   </body>
 </html>
