Fix linter errors

--- a/index.html
+++ b/index.html
@@ -21,7 +21,6 @@
         <img
           class="logo"
           src="images/new-york-times-logo.png"
-          width="auto"
           height="30"
           alt="newyork times logo"
         />
@@ -256,15 +255,11 @@
           width="600"
           height="319"
           src="https://www.youtube.com/embed/ZlfIVEy_YOA"
-          frameborder="0"
           allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
           allowfullscreen
         ></iframe>
-        <caption>
-          Stanford Professor Andrei Linde celebrates physics breakthrough
-          <br />
-          Video by StanfordUniversity
-        </caption>
+        <p id="video-caption">Stanford Professor Andrei Linde celebrates physics breakthrough<br>
+          Video by StanfordUniversity</p>
         <p>
           Confused, Dr. Linde called out to his wife, asking if she had ordered
           anything.
@@ -339,8 +334,6 @@
         </p>
         <figure>
           <img
-            width="100%"
-            height="100%"
             src="https://static01.nyt.com/images/2014/03/18/science/space/18cosmos-2/18cosmos-2-jumbo.jpg?quality=90&auto=webp"
             alt="Bicep2 telescope"
           />
@@ -645,12 +638,11 @@
           <img
           class="logo"
           src="images/new-york-times-logo.png"
-          width="auto"
           height="30"
           alt="newyork times logo"
         />
         </a>
-        <ul class="ul-container">
+        <div class="ul-container">
           <ul>
             <li>News</li>
             <li><a href="">Home Page</a></li>
@@ -736,9 +728,9 @@
             <li><a href="">Replica Edition</a></li>
             <li><a href="">Espanol</a></li>
           </ul>
-        </ul>
+        </div>
       </nav>
-      <footer>
+      <nav>
         <ul>
           <li>&copy; The New York Times Company</li>
           <li><a href="">Contact Us</a></li>
@@ -755,7 +747,7 @@
           <li><a href="">Times Journey</a></li>
           <li><a href="">Manage My Account</a></li>
         </ul>
-      </footer>
+      </nav>
     </footer>
   </body>
 </html>
