fixed image error

--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
           in the instant after the Big Bang 13.8 billion years ago.
         </p>
         <div id="theory-container">
-          <img src="images/inflation-945.png" alt="inflation" />
+          <img src="./images/inflation-945.png" alt="inflation" />
           <div id="text-labels">
             <p class="theory">
               <strong>THE UNIVERSE</strong> is just under 14 billion years old. From our position
@@ -470,20 +470,20 @@
       <div class="side side2">
         <h4>Editors’ Picks</h4>
         <figure>
-          <img src="/images/download.jpeg" alt="lady" />
+          <img src="./images/download.jpeg" alt="lady" />
         <a href="">Everyone writes. But is everyone a writter?</a>
         </figure>
         <figure>
-          <img src="/images/food.jpeg" alt="food" />
+          <img src="./images/food.jpeg" alt="food" />
         <a href="">My quest for lunchbox supremacy</a>
         </figure>
         <figure>
-          <img src="/images/cartoon.jpeg" alt="cartoon" />
+          <img src="./images/cartoon.jpeg" alt="cartoon" />
         <a href="">More and more children are feeling anxious. This graphic novelist
           is trying to help.</a>
         </figure>
         <figure>
-          <img src="/images/doggie.jpeg" alt="doggie" />
+          <img src="./images/doggie.jpeg" alt="doggie" />
         <a href=""><strong>PAID POST: Global covenant of Mayors.</strong> <br> How cities and nations are
           exchanging green solutions</a>
         </figure>
@@ -498,7 +498,7 @@
         <div class="thumbnail-grid">
           <div class="thumbnail">
             <figure>
-              <img src="/images/Astronaut.jpg" alt="astronaut" />
+              <img src="./images/Astronaut.jpg" alt="astronaut" />
               <figcaption>Maxim Shipenkov/EPA, via Shutterstock</figcaption>
             </figure>
             <p>
@@ -509,7 +509,7 @@
           </div>
           <div class="thumbnail">
             <figure>
-              <img src="/images/chandrayaan-2.jpg" alt="chandrayaan-2" />
+              <img src="./images/chandrayaan-2.jpg" alt="chandrayaan-2" />
               <figcaption></figcaption>
             </figure>
             <p>
@@ -520,7 +520,7 @@
           </div>
           <div class="thumbnail">
             <figure>
-              <img src="/images/comet.jpg" alt="comet space" />
+              <img src="./images/comet.jpg" alt="comet space" />
               <figcaption>Gennady Borisov</figcaption>
             </figure>
             <p>The Maybe Comet From Another Star</p>
@@ -528,7 +528,7 @@
           </div>
           <div class="thumbnail">
             <figure>
-              <img src="/images/indianmoon.jpg" alt="moon lander survive" />
+              <img src="./images/indianmoon.jpg" alt="moon lander survive" />
               <figcaption>
                 Manjunath Kiran/Agence France-Presse - Getty Images
               </figcaption>
@@ -541,7 +541,7 @@
           </div>
           <div class="thumbnail">
             <figure>
-              <img src="/images/trumpspace.jpg" alt="Donald trump" />
+              <img src="./images/trumpspace.jpg" alt="Donald trump" />
               <figcaption>
                 Image by Anna Moneymaker/The New York Times
               </figcaption>
@@ -553,7 +553,7 @@
           </div>
           <div class="thumbnail">
             <figure>
-              <img src="/images/maxim-superJumbo.jpg" alt="NASA Astronauts" />
+              <img src="./images/maxim-superJumbo.jpg" alt="NASA Astronauts" />
               <figcaption>Maxim Babenko for The New York Times</figcaption>
             </figure>
             <p>
@@ -568,7 +568,7 @@
         <div class="thumbnail-grid">
           <div class="thumbnail">
             <figure>
-              <img src="/images/sprint.jpg" alt="sprint" />
+              <img src="./images/sprint.jpg" alt="sprint" />
               <figcaption>Cornelia li</figcaption>
             </figure>
             <p>
@@ -578,7 +578,7 @@
           </div>
           <div class="thumbnail">
             <figure>
-              <img src="/images/tekashi.jpg" alt="tekashi 69" />
+              <img src="./images/tekashi.jpg" alt="tekashi 69" />
               <figcaption>Jefferson Siegel for the New York Times</figcaption>
             </figure>
             <p>
@@ -589,7 +589,7 @@
           <div class="thumbnail">
             <figure>
               <img
-                src="/images/silicon-valley.jpg"
+                src="./images/silicon-valley.jpg"
                 alt="silicon-valley therapy"
               />
               <figcaption>Todd StJohn</figcaption>
@@ -637,7 +637,7 @@
         <a href="">
           <img
           class="logo"
-          src="images/new-york-times-logo.png"
+          src="./images/new-york-times-logo.png"
           height="30"
           alt="newyork times logo"
         />
